# Bear

./: CMakeLists.txt
bear/: main.py.in
libear/: CMakeLists.txt  config.h.in  ear.c  setenv.c
libear/lib32/: CMakeLists.txt
libear/lib64/: CMakeLists.txt
